Table Users {
  email string [pk]
  username string
  fname string
  lname string
  password string
  iban iban
  profilePicture string
  createdAt datetime
  updatedAt datetime
}

Table Events {
  id uuid [pk]
  title string
  description text
  date date
  time time
  location string
  wishlist boolean
  gallery boolean

  createdBy string [ref: > Users.email]
  createdAt datetime
  updatedAt datetime
}

Table Invitations {
  id uuid [pk]
  event uuid [ref: > Events.id]
  guestEmail string [ref: > Users.email]
  status status // 'pending', 'accepted', 'declined'
  invitedAt datetime
  replyedAt datetime
}

Table Retailers {
  id uuid [pk]
  name string
  apiUrl string
}

// Shared item catalog
Table ItemCatalogue {
  id uuid [pk]
  name string
  description text
  imagesUrl string
  price decimal
  retailerUrl string
  retailerId uuid [ref: > Retailers.id, null]
  isCustom boolean
  createdAt datetime
  updatedAt datetime
}

// Junction table for event-specific wishlist entry
Table EventItems {
  eventId uuid [ref: > Events.id]
  itemId uuid [ref: > ItemCatalogue.id]
  quantityRequested int
  quantityFulfilled int
  priority status // low, medium, high
  createdAt datetime
  updatedAt datetime

  Note: "Composite primary key on (eventId, itemId)"
  indexes {
    (eventId, itemId) [pk]
  }

}

Table Contributions {
  id uuid [pk]
  eventId uuid [ref: > Events.id]
  itemId uuid [ref: > ItemCatalogue.id]
  contributor string [ref: > Users.email]
  contributedAt datetime
  amount decimal
  isFulfilled boolean

  Note: "References EventItems via (eventId, itemId)"
}

Table Purchases {
  id uuid [pk]
  eventId uuid [ref: > Events.id]
  itemId uuid [ref: > ItemCatalogue.id]
  purchaser string [ref: > Users.email]
  quantity int
  timestamp datetime
  paymentReference string

  Note: "References EventItems via (eventId, itemId)"
}

Table MediaItems {
  id uuid [pk]
  eventId uuid [ref: > Events.id] // Directly linked to the event
  uploader string [ref: > Users.email]
  mediaType string // 'image', 'video'
  url string
  caption text
  status status //pending, approved, rejected
  fileType string
  fileSize int
  uploadedAt datetime
}

Table EventReports {
  id uuid [pk]
  reportedEvent uuid [ref: > Events.id]
  reportedBy string [ref: > Users.email]
  reason string
  description text
  reportedAt datetime
}

Table UserReports {
  id uuid [pk]
  reportedUser string [ref: > Users.email]
  reportedBy string [ref: > Users.email]
  reason string
  description text
  reportedAt datetime
}

Table MarkedItems {
  id uuid [pk]
  marker string [ref: > Users.email]
  eventId uuid [ref: > Events.id]
  itemId uuid [ref: > ItemCatalogue.id]
  markType string // 'reserved', 'contributing'
  markedAt datetime

  Note: "Indicates a user has marked an item in the context of an event"
}

Ref: "Contributions"."id" < "Contributions"."itemId"
